--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,7 @@ nav {
   height: 4em;
   margin-bottom: ;
   /* border-radius: 0px 0px 0px 0px; */
-  box-shadow: 100px 100px 200px rgba(253, 219, 26, 0.1);
+  /*box-shadow: 100px 100px 200px rgba(253, 219, 26, 0.1);*/
 }
 
 .space1 {
