--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   margin: 0%;
   padding: 0%;
-  background-color:#101820ff;
+  background-color:#1d1b1b;
 }
 
 body {
@@ -32,7 +32,7 @@ nav {
   height: 4em;
   margin-bottom: ;
   /* border-radius: 0px 0px 0px 0px; */
-  /*box-shadow: 100px 100px 200px rgba(253, 219, 26, 0.1);*/
+  /* box-shadow: 100px 100px 200px rgb(248, 213, 11); */
 }
 
 .space1 {
@@ -71,17 +71,18 @@ nav {
   /* background-color: peru; */
 }
 
-.empty-space2 {
+/* .empty-space2 {
   display: flex;
   width: 50%;
   height: 100%;
-  /* background-color: yellowgreen; */
-}
+  background-color: yellowgreen; 
+}*/
 
 .nav-links {
-  display: flex;
-  width: 50%;
+  display: inline-flex;
+  width: 100%;
   /* background-color: teal; */
+  justify-content: center;
   height: 100%;
 }
 
@@ -91,7 +92,7 @@ nav {
   display: inline-flex;
   list-style: none;
   height: 100%;
-  width: 100%;
+  width: 80%;
   /* background-color: tan; */
 }
 
@@ -110,11 +111,11 @@ nav {
   position: relative;
   display: flexbox;
   flex-direction: column;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   align-items: center;
   text-decoration:none;
   margin: 0 .5em 4em 0;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   /* background-color: darkgrey; */
   color: white;
 }
@@ -160,7 +161,7 @@ nav {
 
 .nav-links ul li a:hover span:nth-child(1){
   transform: translateY(-100%);
-
+  
 }
 .nav-links ul li a:hover span:nth-child(2){
   transform: translateY(-100%);
